fix: login page overflow

--- a/src/app/(out)/login/login.module.scss
+++ b/src/app/(out)/login/login.module.scss
@@ -1,13 +1,10 @@
 .main{
     display: flex;
-    height: 100vh;
-    width: 100vw;
+    flex: 1;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     background-color: #e4e2e0;
-
-
 
     .box_login{
         display: flex;
